--- a/style.css
+++ b/style.css
@@ -745,7 +745,7 @@
         }
 
         #imachek .flip-back {
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/imachek.gif');
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/imachek1.webp');
         }
 
         #wonders .flip-back {
