--- a/style.css
+++ b/style.css
@@ -691,7 +691,7 @@
         }
 
         [class$="flip-back"] {
-            background-size: contain;
+            background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
         }
