--- a/style.css
+++ b/style.css
@@ -733,7 +733,7 @@
 }
 
 #imachek .flip-back {
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/imachek_.webp');
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/imachek0.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
