--- a/style.css
+++ b/style.css
@@ -740,7 +740,7 @@
 }
 
 #assistin .flip-back {
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/assistin_logo0.webp');
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/assistin.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
